@@ -36,7 +36,8 @@ example_DATA = \
 	riemann-integral-darboux.gel \
 	plot-ode-runge-kutta.gel \
 	plot-ode-trajectory-runge-kutta.gel \
-	plane-curves.gel
+	plane-curves.gel \
+	zoom-differentiability.gel
 
 EXTRA_DIST = \
 	$(example_DATA)
