@@ -4,6 +4,7 @@ Changes to 1.0.27
 * Allow setting editor color scheme in the settings dialog
 * Closing window acts exactly like the quit button/menu item
 * Remove menu icons
+* Leave the Stop button on the plot window enabled if a script is running
 
 Changes to 1.0.26
 
