@@ -1,3 +1,11 @@
+Thu Oct 14 00:00:18 2021  Jiri (George) Lebl <jirka@5z.com>
+
+	* graphing.c: improve slightly the frozenness of 3d plots, and enable
+	  the stop button on the graph window the whole time a script is running.
+
+	* examples/zoom-differentiability.gel: Example of zooming into a
+	  differentiable and a nondifferentiable function of two variables
+
 Wed Oct 13 17:41:48 2021  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: allow setting editor color scheme in the
